<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <Button
            android:text="@string/connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btConnect"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etServerAddress"/>
        <Button
            android:text="@string/reset_straight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btResetStraight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btConnect"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etServerAddress"
            android:inputType="text|textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/server_address"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:text="@string/server_address_default"/>

        <TextView
            android:id="@+id/tvCurrentSteeringAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/current_steering_angle_initial"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@id/tvSteeringAngleTitle"
            app:layout_constraintTop_toBottomOf="@id/btResetStraight"
            tools:layout_editor_absoluteY="221dp" />

        <TextView
            android:id="@+id/tvSteeringAngleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/steering_angle_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/lightText"
            app:layout_constraintEnd_toStartOf="@+id/tvCurrentSteeringAngle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btResetStraight"
            tools:layout_editor_absoluteY="221dp" />


        <!--<org.ccs_labs.bicycletelemetry.SteeringAngleVisualizationView
            android:id="@+id/steeringAngleVisualization"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etLowPassCutoff" />-->

        <TextView
            android:id="@+id/tvConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/connection_status_not_connected"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSteeringAngleTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
